--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,5 +1,5 @@
-$body-font-family: Tajawal, Arial, sans-serif;
-
-$heading-font-family: Tajawal, Arial, sans-serif;
-
 @import '~vuetify/src/styles/styles.sass';
+
+$material-light: (
+  'background': rgba(109, 76, 65, 0.03)
+);
