--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -8,6 +8,8 @@ $body-font-family: Scheherazade, Arial, Helvetica, sans-serif;
 
 $heading-font-family: Scheherazade, Arial, Helvetica, sans-serif;
 
+$font-size-root: 18px;
+
 $headings: (
   'h1': (
     'size': 6rem,
